# openglworkshop1

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
res/shaders/: cube.vert
src/: completed.cpp  main.cpp  shader.cpp  template.cpp
